--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
-          source: ./docs/.vitepress/dist
+          source: ./.vitepress/dist
           destination: ./_site
 
       - name: Upload artifact
